[package]
name = "tss_client_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.1", default-features = false, features = ["json"] }
tss_sm_signing = { path = "../tss_sm_signing" }
tokio = { version = "1", default-features = false, features = ["macros"] }
uuid = { version = "0.8", features = ["v4"] }
surf = "2"
reqwest = { version = "0.11", features = ["blocking", "json"] }
dotenv = "0.15.0"
serde_json = "1.0.91"
