[package]
name = "tss_client_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.1", default-features = false, features = [
    "json",
] }
tss_sm_client = { path = "../tss_sm_client" }
tokio = { version = "1", default-features = false, features = [
    "macros",
    "full",
] }
uuid = { version = "0.8", features = ["v4"] }
surf = "2"
reqwest = { version = "0.11", features = ["blocking", "json"] }
dotenv = "0.15.0"
serde_json = "1.0.91"
lazy_static = "1.4.0"
diesel = { version = "2.0.0", features = ["postgres"] }
rust-crypto = "0.2"
secp256k1 = "0.26"
eth_checksum = "0.1.2"
