[package]
name = "tss_share_2_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.1", default-features = false, features = ["json"] }
tss_sm_signing = { path = "../tss_sm_signing" }
surf = "2"
tokio = { version = "1", default-features = false, features = ["macros"] }
