[package]
name = "tss_share_2_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.1", default-features = false, features = ["json"] }
tss_sm_signing = { path = "../tss_sm_signing" }
surf = "2"
tokio = { version = "1", default-features = false, features = ["macros"] }
dotenv = "0.15.0"
futures = "0.3.25"
lapin = "2.1.1"
serde = "1.0.152"
serde_json = "1.0.91"
lazy_static = "1.4.0"
reqwest = { version = "0.11.13", features = ["json"] }
