[package]
name = "tss_sm_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
structopt = "0.3"
round-based = { version = "0.1.4", features = ["dev"] }
surf = "2"
serde_json = "1.0"
async-sse = "5"
curv-kzen = { version = "0.9", default-features = false }
tokio = { version = "1", default-features = false, features = ["macros"] }
hex = "0.4"
multi-party-ecdsa = { path = "../multi-party-ecdsa" }
