[package]
name = "tss_sm_manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.1", default-features = false, features = ["json"] }
tokio = { version = "1", default-features = false, features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
futures = "0.3"
